# verity

./: .gitignore  Anchor.toml  README.md  package-lock.json
programs/verity/: Cargo.toml
programs/verity/src/: error.rs  lib.rs  state.rs
programs/verity/src/instructions/: attestation.rs  buy_now.rs  cancel_listing.rs  create_listing.rs  initialize_attestor_state.rs  initialize_config.rs  initialize_listing.rs  initialize_user_vault.rs  mod.rs  withdraw_from_vault.rs
tests/: verity.ts
