[package]
name = "verity"
version = "0.1.0"
description = "Verity - Dynamic NFT Marketplace on Solana"
edition = "2021"

[lib]
name = "verity"
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
default = []

[dependencies]
anchor-lang = "0.30.0"  # ← Newer version
anchor-spl = "0.30.0"
solana-program = "1.18.6"
mpl-token-metadata = "4.1.2"

[dev-dependencies]
anchor-client = "0.30.0"
solana-sdk = "1.18.6"